<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <com.sirc.tlt.ui.view.TemplateTitle
        android:id="@+id/release_question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canBack="true"
        app:titleText="@string/ask"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/btn_submit_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:layout_margin="10dp"
        android:textSize="@dimen/login_or_register"
        android:background="@color/background_blue"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        />

    <com.sirc.tlt.ui.view.ClearableEditText
        android:id="@+id/edit_question_type"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:hint="@string/question_type"
        android:gravity="center_vertical"
        android:textSize="@dimen/sp_14"
        android:background="@color/white"
        android:textColor="@color/text_black"
        android:singleLine="true"
        android:padding="5dp"
        android:layout_below="@id/release_question_title"
        android:editable="false"
        />

    <com.sirc.tlt.ui.view.ClearableEditText
        android:id="@+id/edit_question_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:hint="@string/question_title"
        android:gravity="center_vertical"
        android:textSize="@dimen/sp_14"
        android:background="@color/white"
        android:textColor="@color/text_black"
        android:padding="5dp"
        android:layout_below="@id/edit_question_type"/>

    <com.sirc.tlt.ui.view.ClearableEditText
        android:id="@+id/edit_question_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/question_describe"
        android:gravity="center_vertical"
        android:textSize="@dimen/sp_14"
        android:background="@color/white"
        android:textColor="@color/text_black"
        android:padding="5dp"
        android:layout_below="@id/edit_question_title"/>

</RelativeLayout>
