<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simple_gray"
    android:fitsSystemWindows="true"
    >


    <com.sirc.tlt.ui.view.TemplateTitle
        android:id="@+id/more_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canBack="true"
        app:titleText="@string/more"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="退 出 登 录"
        android:textSize="@dimen/title_text_size"
        android:gravity="center"
        android:background="@color/white"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/more_title"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_update"
                style="@style/setting_textview"
                android:drawableRight="@null"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="V1.0"
                style="@style/setting_textview"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <include layout="@layout/view_line"></include>
        <TextView
            android:id="@+id/tv_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/clean_cache"
            style="@style/setting_textview"/>

        <include layout="@layout/view_line"></include>
        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/about_us"
            style="@style/setting_textview"/>

        <include layout="@layout/view_line"></include>
        <TextView
            android:id="@+id/tv_law_declare"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/law_declaration"
            style="@style/setting_textview"/>
        <include layout="@layout/view_line"></include>

    </LinearLayout>

</RelativeLayout>
