<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simple_gray"
    android:fitsSystemWindows="true"
    tools:context="com.sirc.tlt.ui.activity.SuggestActivity">


    <com.sirc.tlt.ui.view.TemplateTitle
        android:id="@+id/suggest_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canBack="true"
        app:titleText="@string/suggestions"
        />


    <Button
        android:id="@+id/btn_submit_suggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:layout_margin="10dp"
        android:textSize="@dimen/login_or_register"
        android:background="@color/background_blue"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suggest_title"
        android:orientation="vertical"
        >
        <com.sirc.tlt.ui.view.ClearableEditText
            android:id="@+id/edit_suggest"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_suggest"
            android:gravity="start"
            android:textSize="@dimen/sp_14"
            android:background="@color/white"
            android:textColor="@color/text_black"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/edit_color_cursor"/>
        <com.sirc.tlt.ui.view.ClearableEditText
            android:id="@+id/edit_contact_suggest"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/contact_suggest"
            android:gravity="center_vertical"
            android:textSize="@dimen/sp_14"
            android:background="@color/white"
            android:textColor="@color/text_black"
            android:singleLine="true"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/edit_color_cursor"/>
    </LinearLayout>

</RelativeLayout>
